--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       </div>
       </a>
     </div>
+    <span class="horline" style="margin-top: 20px;"><span> <a style="margin-top: 20px; text-decoration: none;color: #182d8b;" href="http://spcniftemt.pages.dev/" target="_blank">Click here for login to Students Portal</a></span></span>
+   
+
   </div>
   <img style="scale: 30%;width: 50px;  filter: invert(1);" src="passkey.webp" alt="" srcset="">
 </section>
