--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -669,7 +669,9 @@ alert("PassKey is already created for this Device")
            function fetchd (){
   console.log("Students Details Fetching....")
 var loggedname = localStorage.getItem("loggedname");
-    var formDataString =loggedname;
+var rid  = localStorage.getItem("loggeduserdetails");
+var uid = JSON.parse(rid).id;
+    var formDataString =uid;
     console.log(formDataString)
 
     fetch(
