--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -1053,7 +1053,7 @@ console.log(updatas[f+1].value,vdatas[id-2][f]);
    
    var r = result1.data2;
    console.log(r);
-   fetchd ();
+   //fetchd ();
    if (r=="Success"){
    document.getElementById("loader").style.display="none"; 
      document.getElementById("message").textContent = "Updated";
@@ -1153,7 +1153,7 @@ vheads.push(updatas[f].name)
    
    var r = result1.data2;
    console.log(r);
-   fetchd ();
+  // fetchd ();
    if (r=="Success"){
    document.getElementById("loader").style.display="none"; 
      document.getElementById("message").textContent = "Student Added";
