--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -102,9 +102,10 @@ else{
   else{
     udata[now] = "https://spcniftemt.pages.dev/user/"+udata[now];
   }*/
-  const imgUrl = udata[now].includes("google.com") 
+var imgUrl = udata[now].includes("google.com") 
                     ? udata[now] 
                     : `https://spcniftemt.pages.dev/user/${udata[now]}`;
+                    imgUrl = imgUrl==="https://spcniftemt.pages.dev/user/" ? "https://drive.google.com/thumbnail?id=1nOLFcYJUGcJTxJEcH4jqoDFZWUgiGq0F&sz=w1000" : imgUrl;
     i.children[0].children[0].src = imgUrl;
   }
   else{
@@ -852,9 +853,10 @@ function generateTableHTML(heads, datas, role, access, uaccess, loggedname, allo
             
             if (d === 0) {
                 // Handle image cells
-                const imgUrl = datas[r][d].includes("google.com") 
+                var imgUrl = datas[r][d].includes("google.com") 
                     ? datas[r][d] 
                     : `https://spcniftemt.pages.dev/user/${datas[r][d]}`;
+                    imgUrl = imgUrl==="https://spcniftemt.pages.dev/user/" ? "https://drive.google.com/thumbnail?id=1nOLFcYJUGcJTxJEcH4jqoDFZWUgiGq0F&sz=w1000" : imgUrl;
                 
                 td += `<td><div style="background-color: rgb(237, 235, 235); border-radius: 110px; height: 110px; width: 110px; margin: 0 auto;">
                       <img style="border-radius: 50px; width: 100px; height: 100px; object-fit: cover; margin: 5px 5px 5px 5px;" 
@@ -1278,6 +1280,7 @@ vheads.push(updatas[f].name)
         document.getElementById("loader").style.display="none"; 
         document.getElementById("message").textContent="Upload Successful";
         btn.previousElementSibling.src = "https://drive.google.com/thumbnail?id="+imgid+"&sz=w1000";
+  //      btn.nextElementSibling.value= img;
         setTimeout(function () { document.getElementById("load").style.display="none"; },2000);
     }
     </script>
