--- a/f&r/register_details.html
+++ b/f&r/register_details.html
@@ -315,10 +315,10 @@ document.getElementById("popup-40").classList.toggle("active");
 </div>
   <section id="Batch-full-details">
     
-  <!-- <div style="height: 100vh; display: flex;align-items: center;justify-content: center;">
+   <div style="height: 100vh; display: flex;align-items: center;justify-content: center;">
 <span>Fetching details....</span>
-    </div>-->
-  <div class="Batch active">
+    </div>
+ <!-- <div class="Batch active">
   <div class="Batch-Degree-Links">
     <div>
     <div>
@@ -361,7 +361,7 @@ document.getElementById("popup-40").classList.toggle("active");
       </table>
     </div>
   
-</div>
+</div>-->
   </section>
 
 
