--- a/f&r/register_details.html
+++ b/f&r/register_details.html
@@ -515,7 +515,7 @@ document.getElementById("popup-40").classList.toggle("active");
           </div>
             </div>
           </div>
-            <div class="popup active" id="popup-40">
+            <div class="popup" id="popup-40">
  
               <div class="overlay"></div>
           
