--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@ else{
  },2000);
 }
 function getuserdetails(user,pass){
-    var formDataString =user+"/12";
+  var userr = user.split("/")
+    var formDataString =userr[0]+"/12";
     console.log(formDataString)
     document.getElementById("loader").style.display="block"; 
             document.getElementById("load").style.display="initial";
@@ -332,6 +333,10 @@ window.location="set-pass.html";
 
   }
   else{
+    if(userr[1]=="ADMIN"&&pass==userdetails[0]){
+onuploadcomplete();
+return
+    }
        var url ="https://passkey-5ev6.onrender.com";
 async  function getdehash(){
     const res = await fetch(url+"/dehash",
